added support for multiple Dockerfiles added Logger to Docker Image

--- a/Dockerfile_EdgeTPU
+++ b/Dockerfile_EdgeTPU
@@ -13,8 +13,19 @@ RUN mkdir object_detection
 RUN apt-get -y update
 
 RUN apt-get install -y protobuf-compiler python-pil python-lxml
+RUN apt-get -y install git usbutils nano # must be after protobuf
+
+RUN echo "deb https://packages.cloud.google.com/apt coral-edgetpu-stable main" | tee /etc/apt/sources.list.d/coral-edgetpu.list
+RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+RUN apt-get -y update
+RUN apt-get install -y libedgetpu1-std
+
+
+RUN python3 -m pip install --upgrade pip
 
 RUN pip install matplotlib
+RUN apt-get install -y python3-pycoral
+RUN pip install tflite-runtime
 
 COPY Logger.py .
 
@@ -23,12 +34,13 @@ COPY repo/centernet_hg104_1024x1024_coco17_tpu-32 ./centernet_hg104_1024x1024_co
 COPY repo/mscoco_label_map.pbtxt .
 COPY repo/object_detection ./object_detection
 COPY plot_object_detection_saved_model.py .
-COPY repo/tensorflow-2.12.0-cp38-cp38-linux_x86_64.whl .
 
 # Run protobuf compiler
 RUN protoc ./object_detection/protos/*.proto --python_out=.
 RUN export PYTHONPATH=$PYTHONPATH:`pwd`:`pwd`/slim
 
-# Install custom tensorflow (no-avx, no-gpu)
-RUN python -m pip install tensorflow-2.12.0-cp38-cp38-linux_x86_64.whl
-RUN python -c 'import tensorflow as tf; msg = tf.constant("TensorFlow 2.0 Hello World"); tf.print(msg)' # validate installation
+
+RUN mkdir coral && cd coral
+RUN git clone https://github.com/google-coral/pycoral.git
+WORKDIR ./pycoral
+RUN bash examples/install_requirements.sh classify_image.py
