--- a/Dockerfile_EdgeTPU
+++ b/Dockerfile_EdgeTPU
@@ -4,7 +4,7 @@ WORKDIR /home
 
 RUN apt-get -y update
 
-RUN apt-get -y install git usbutils nano
+RUN apt-get -y install git usbutils nano wget
 
 RUN echo "deb https://packages.cloud.google.com/apt coral-edgetpu-stable main" | tee /etc/apt/sources.list.d/coral-edgetpu.list
 RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
@@ -17,14 +17,12 @@ RUN apt-get install -y python3-pycoral
 
 RUN mkdir coral && cd coral
 
-RUN apt-get install git
-
 RUN git clone https://github.com/CuzImClicks/pycoral ./pycoral # cannot copy -> $'\r': command not found
 RUN cd pycoral
 WORKDIR pycoral
 COPY pull.sh .
 COPY push.sh .
-COPY Logger.py ./examples
+RUN wget https://raw.githubusercontent.com/CuzImClicks/Raccoon/main/Logger.py -P ./examples/
 RUN bash examples/install_requirements.sh detect_image.py
 RUN mkdir input
 RUN mkdir output
