--- a/Dockerfile_EdgeTPU
+++ b/Dockerfile_EdgeTPU
@@ -24,8 +24,8 @@ RUN python -m pip install tensorflow-2.12.0-cp38-cp38-linux_x86_64.whl
 RUN git clone https://github.com/CuzImClicks/pycoral ./pycoral # cannot copy -> $'\r': command not found
 RUN cd pycoral
 WORKDIR pycoral
-COPY pull.sh .
-COPY push.sh .
+COPY pull.py .
+COPY push.py .
 RUN wget https://raw.githubusercontent.com/CuzImClicks/Raccoon/main/Logger.py -P ./examples/
 RUN wget https://raw.githubusercontent.com/google-coral/test_data/master/efficientdet_lite3_512_ptq_edgetpu.tflite -P ./test_data/
 RUN bash examples/install_requirements.sh detect_image.py
